# tinyllm-from-scratch-

./: .gitignore  README.md  main.py  pyproject.toml
src/: model.py  prepare_tokens.py  sample.py  train.py  train_tokenizer.py
