[project]
name = "tinyllm-from-scratch"
version = "0.1.0"
description = "Mini GPT from scratch (CPU, educational)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch==2.2.2",
  "sentencepiece",
  "numpy==1.26.4",
  "tqdm",
]

[tool.uv]
required-environments = ["sys_platform == 'darwin' and platform_machine == 'x86_64'"]